--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "vim/bundle/vim-slurper"]
 	path = vim/bundle/vim-slurper
 	url = git://github.com/alowe/vim-slurper.git
+[submodule "vim/bundle/bufexplorer"]
+	path = vim/bundle/bufexplorer
+	url = https://github.com/vim-scripts/bufexplorer.zip.git
