--- a/.gitmodules
+++ b/.gitmodules
@@ -1,81 +1,6 @@
-[submodule "vim/bundle/vim-fugitive"]
-	path = vim/bundle/vim-fugitive
-	url = git://github.com/tpope/vim-fugitive.git
-[submodule "vim/bundle/vim-rails"]
-	path = vim/bundle/vim-rails
-	url = git://github.com/tpope/vim-rails.git
-[submodule "vim/bundle/vim-ragtag"]
-	path = vim/bundle/vim-ragtag
-	url = git://github.com/tpope/vim-ragtag.git
-[submodule "vim/bundle/snipmate"]
-	path = vim/bundle/snipmate
-	url = git://github.com/msanders/snipmate.vim.git
-[submodule "vim/bundle/vim-rake"]
-	path = vim/bundle/vim-rake
-	url = git://github.com/tpope/vim-rake.git
-[submodule "vim/bundle/vim-cucumber"]
-	path = vim/bundle/vim-cucumber
-	url = git://github.com/tpope/vim-cucumber.git
-[submodule "vim/bundle/vim-haml"]
-	path = vim/bundle/vim-haml
-	url = git://github.com/tpope/vim-haml.git
-[submodule "vim/bundle/vim-git"]
-	path = vim/bundle/vim-git
-	url = git://github.com/tpope/vim-git.git
-[submodule "vim/bundle/nerdtree"]
-	path = vim/bundle/nerdtree
-	url = git://github.com/scrooloose/nerdtree.git
-[submodule "vim/bundle/nerdcommenter"]
-	path = vim/bundle/nerdcommenter
-	url = git://github.com/scrooloose/nerdcommenter.git
-[submodule "vim/bundle/git-vim"]
-	path = vim/bundle/git-vim
-	url = git://github.com/motemen/git-vim.git
-[submodule "vim/bundle/coffee-script"]
-	path = vim/bundle/coffee-script
-	url = git://github.com/kchmck/vim-coffee-script.git
-[submodule "vim/bundle/lusty"]
-	path = vim/bundle/lusty
-	url = git://github.com/sjbach/lusty.git
-[submodule "vim/bundle/ack.vim"]
-	path = vim/bundle/ack.vim
-	url = git://github.com/mileszs/ack.vim.git
-[submodule "vim/bundle/vim-autoclose"]
-	path = vim/bundle/vim-autoclose
-	url = git://github.com/Townk/vim-autoclose.git
-[submodule "vim/bundle/vim-surround"]
-	path = vim/bundle/vim-surround
-	url = git://github.com/tpope/vim-surround.git
-[submodule "vim/bundle/vim-repeat"]
-	path = vim/bundle/vim-repeat
-	url = git://github.com/tpope/vim-repeat.git
-[submodule "vim/bundle/vim-scratch"]
-	path = vim/bundle/vim-scratch
-	url = git://github.com/duff/vim-scratch.git
-[submodule "vim/bundle/textile"]
-	path = vim/bundle/textile
-	url = git://github.com/timcharper/textile.vim.git
-[submodule "vim/bundle/vim-nginx"]
-	path = vim/bundle/vim-nginx
-	url = git://github.com/clones/vim-nginx.git
-[submodule "vim/bundle/supertab"]
-	path = vim/bundle/supertab
-	url = git://github.com/ervandew/supertab.git
-[submodule "vim/bundle/vim-zoomwin"]
-	path = vim/bundle/vim-zoomwin
-	url = git://github.com/rphillips/vim-zoomwin.git
-[submodule "vim/bundle/command-t"]
-	path = vim/bundle/command-t
-	url = git://github.com/wincent/Command-T.git
-[submodule "vim/bundle/taglist"]
-	path = vim/bundle/taglist
-	url = git://github.com/esukram/taglist.vim.git
-[submodule "vim/bundle/vim-slurper"]
-	path = vim/bundle/vim-slurper
-	url = git://github.com/alowe/vim-slurper.git
 [submodule "vim/bundle/bufexplorer"]
 	path = vim/bundle/bufexplorer
 	url = https://github.com/vim-scripts/bufexplorer.zip.git
-[submodule "vim"]
-	path = vim
+[submodule ".janus"]
+	path = .janus
 	url = git://github.com/carlhuda/janus.git
